add validator and update swagger version
